--- a/css/main.scss
+++ b/css/main.scss
@@ -6,8 +6,8 @@ title: css
 
 /////fonts/////
 $font-body:  "Surveyor SSm A", "Surveyor SSm B", Georgia, serif;
-$font-display: "Chronicle Hairline A", "Chronicle Hairline B", Georgia, serif;
-$font-link: "Ideal Sans SSm A","Ideal Sans SSm B", Helvetica, Arial, sans-serif;
+$font-display: "Surveyor SSm A", "Surveyor SSm B", Georgia, serif;
+$font-link: "Operator SSm A", "Operator SSm B", Helvetica, Arial, monospace;
 $font-body-size: 14px;
 $font-display-size: 18px;
 $heading-size: 24pt;
