--- a/_includes/header.html
+++ b/_includes/header.html
@@ -1,8 +1,8 @@
 <header id="site-header" class="site-header">
     <div class="site-info">
         <a class="site-title" href="{{ site.baseurl }}/">olsen.works</a>
+        <a class="email-link" href="mailto:scg.olsen@gmail.com">contact</a>
         <p class="current-page-indicator">Currently Viewing: {{ page.title }}</p>
-        <p><a class="email-link" href="mailto:scg.olsen@gmail.com">Email the Author</a></p>
     </div>
     {% if page.title != "Home" %}
     <div class="nav-info-container">
