--- a/_sass/_layout.scss
+++ b/_sass/_layout.scss
@@ -57,6 +57,8 @@ svg {
   margin-top: $spacing-unit / 2;
   padding-left: $spacing-unit;
   width: 100%;
+  padding-bottom:14px;
+  border-bottom:1px solid #bbbbbb;
   @media screen and (min-width:1220px) and (max-width: 1440px) {
     //margin-left: 8%;
   }
@@ -72,9 +74,9 @@ svg {
 }
 
 .site-title {
-  padding-top: 3px;
+  padding: 0px;
   font-family: $font-link;
-  margin-bottom: $spacing-unit;
+  margin-right: $spacing-unit;
   @media screen and (max-width: 767px) {
     //margin-left: 10%;
   }
@@ -98,11 +100,11 @@ svg {
 }
 
 .info-content {
-  opacity:0.5;
+  //opacity:0.5;
   //border-top: 1px solid $black-color;
-  padding-top:2px;
-  max-width: 360px;
-  margin-bottom: $spacing-unit - 4px;
+  //padding-top:2px;
+  //max-width: 360px;
+  //margin-bottom: $spacing-unit - 4px;
 }
 
 .info-content-link {
@@ -358,11 +360,11 @@ figcaption {
 /////hero section/////
 
 .post-title-link-p {
-  margin-bottom: $spacing-unit + 20px;
+  margin-bottom: 8px;
 }
 
 .post-list {
-  margin-bottom: $spacing-unit;
+  width:100%;
 }
 
 ////critiques////
