Minor updates to layout. Ressurected the footer.

--- a/_includes/header.html
+++ b/_includes/header.html
@@ -2,6 +2,7 @@
     <div class="site-info">
         <a class="site-title" href="{{ site.baseurl }}/">olsen.works</a>
         <a class="email-link" href="mailto:scg.olsen@gmail.com">contact</a>
+        <p class="site-description">{{ site.description }}</p>
         <p class="current-page-indicator">Currently Viewing: {{ page.title }}</p>
     </div>
     {% if page.title != "Home" %}
