--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -24,5 +24,5 @@
       </g>
     </g>
   </svg>
-  <a href="mailto:scg.olsen@gmail.com?Subject=Let's%20get%20coffee!">Grab Coffee With Me</a>
+  <a class="email-link" href="mailto:scg.olsen@gmail.com?Subject=Let's%20get%20coffee in {{ site.location }}&Body=Hey Scott,%0A%0A I'm in {{ site.location }} and was wondering if we could hang out and chat about xyz.%0A%0A Surely you'll come up with a better email body than this. :)">Grab coffee with me</a>
 </footer>
