--- a/_sass/_layout.scss
+++ b/_sass/_layout.scss
@@ -1,28 +1,30 @@
 ////Coffee////
 svg {
-  margin-left: 11%;
-  @media screen and (min-width:1220px) and (max-width: 1440px) {
-    margin-left: 8%;
-  }
-  @media screen and (min-width: 768px) and (max-width: 1023px) {
-    margin-left: 5%;
-  }
-  @media screen and (max-width: 767px) {
-    margin-left: 5%;
-  }
+  margin-left: 0%;
+  opacity: 0.8;
 }
 
 .site-footer {
-  opacity: 0;
-  width:100%;
+  width:40%;
   position:fixed;
+  float:left;
   bottom:0;
-  display: none;
+  opacity: 0.2;
+  //display: none;
 }
 
 .site-footer a {
-  margin-top: 10px;
-  margin-left: 1%;
+  margin-top:12px;
+  position:absolute;
+  transition-property: color;
+  transition-duration: 0.6s;
+  color: $nav-color;
+}
+
+.site-footer a:hover {
+  transition-property: color;
+  transition-duration: 0.6s;
+  color: $body-color;
 }
 
 /////content-area/////
@@ -58,9 +60,10 @@ svg {
   padding-left: $spacing-unit;
   width: 100%;
   padding-bottom:14px;
-  border-bottom:1px solid #bbbbbb;
+  //border-bottom:0.5px solid #bbbbbb;
   @media screen and (min-width:1220px) and (max-width: 1440px) {
     //margin-left: 8%;
+
   }
   @media screen and (min-width: 768px) and (max-width: 1023px) {
     //margin-left: 5%;
@@ -93,9 +96,15 @@ svg {
   //color:#fff;
   float:left;
   width:40%;
+  position:fixed;
+  @media screen and (max-width: 980px) {
+    //border-bottom: 1px solid $black-color;
+    position:absolute;
+  }
   @media screen and (max-width: 767px) {
     //border-bottom: 1px solid $black-color;
     width:100%;
+    position:absolute;
   }
 }
 
