--- a/_sass/_typography.scss
+++ b/_sass/_typography.scss
@@ -44,7 +44,7 @@ h2 {
 }
 
 h4 {
-  font-family: Karbon;
+  font-family: $font-link;
   letter-spacing: 0.4em;
   color: $grey-color;
   font-size: 14px;
@@ -59,7 +59,7 @@ h4 {
 }
 
 .site-title {
-  font-family: Karbon; 
+  font-family: $font-link; 
   font-weight: 500;
   font-size:$font-body-size;
   line-height: $small-line-height;
@@ -81,7 +81,7 @@ h4 {
 
 .email-link {
   font-weight: 400;
-  font-family: Karbon;
+  font-family: $font-link;
   font-size: $font-body-size;
   line-height: $small-line-height;
 }
@@ -107,7 +107,7 @@ h4 {
 
 .page-title {
   font-size: 14px;
-  font-family: Karbon;
+  font-family: $font-link;
   font-weight:300;
   opacity: 1;
   margin-bottom: 10px;
