--- a/_sass/_typography.scss
+++ b/_sass/_typography.scss
@@ -38,7 +38,7 @@ h1 {
 }
 
 h2 {
-  font-family: Karbon;
+  font-family: $font-link;
   font-size: $font-body-size;
   color: $grey-color;
 }
@@ -47,7 +47,7 @@ h4 {
   font-family: $font-link;
   letter-spacing: 0.4em;
   color: $grey-color;
-  font-size: 14px;
+  font-size: 11px;
   font-weight: 500;
   display: none;
 }
