--- a/_sass/_typography.scss
+++ b/_sass/_typography.scss
@@ -61,7 +61,7 @@ h4 {
 .site-title {
   font-family: $font-link; 
   font-weight: 500;
-  font-size:$font-body-size;
+  font-size:11px;
   line-height: $small-line-height;
 }
 
@@ -82,7 +82,7 @@ h4 {
 .email-link {
   font-weight: 400;
   font-family: $font-link;
-  font-size: $font-body-size;
+  font-size: 11px;
   line-height: $small-line-height;
 }
 
