--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -8,6 +8,6 @@
         {{ content }}
     </section>
   </section>
-  {% include footer.html %}
+  <!--{% include footer.html %}-->
   </body>
 </html>
