--- a/_sass/_typography.scss
+++ b/_sass/_typography.scss
@@ -106,8 +106,9 @@ h4 {
 }
 
 .page-title {
-  font-size: 14px;
-  font-family: $font-link;
+  font-size: 24px;
+  font-family: $font-display;
+  font-style:italic;
   font-weight:300;
   opacity: 1;
   margin-bottom: 10px;
