--- a/_sass/_typography.scss
+++ b/_sass/_typography.scss
@@ -111,7 +111,7 @@ h4 {
   font-style: italic;
   font-weight:200;
   opacity: 0.8;
-  margin-bottom: 32px;
+  margin-bottom: 42px;
 }
 
 .site-description {
@@ -132,7 +132,7 @@ h4 {
 
 .post-title-link {
   font-family: $font-display;
-  font-size: $small-font-size;
+  font-size: $font-body-size;
   line-height: $small-line-height;
 }
 
