--- a/_sass/_typography.scss
+++ b/_sass/_typography.scss
@@ -132,7 +132,7 @@ h4 {
 
 .post-title-link {
   font-family: $font-display;
-  font-size: $font-body-size;
+  font-size: $small-font-size;
   line-height: $small-line-height;
 }
 
