--- a/_includes/header.html
+++ b/_includes/header.html
@@ -5,7 +5,7 @@
         <p class="site-description">{{ site.description }}</p>
         <p class="current-page-indicator">Currently Viewing: {{ page.title }}</p>
     </div>
-    {% if page.title != "Home" %}
+    <!--{% if page.title != "Home" %}
     <div class="nav-info-container">
         <nav class="site-nav">
             {% for item in site.pages %}
@@ -15,5 +15,5 @@
             {% endfor %}
         </nav>
    </div>
-    {% endif %}
+    {% endif %}-->
 </header>
