--- a/_sass/_typography.scss
+++ b/_sass/_typography.scss
@@ -59,8 +59,8 @@ h4 {
 }
 
 .site-title {
-  font-family: $font-link; 
-  font-weight: 500;
+  font-family: $font-display; 
+  font-weight: 400;
   font-size:11px;
   line-height: $small-line-height;
 }
@@ -153,7 +153,8 @@ h4 {
 }
 
 .datum {
-  font-family: $font-link;
+  font-family: $font-display;
+  font-style: italic;
   font-size: $small-font-size;
   width:100%;
   margin-bottom:14px;
