--- a/_sass/_layout.scss
+++ b/_sass/_layout.scss
@@ -307,11 +307,16 @@ width:100%;
 .post-title {
   //margin-bottom: 4px;
   font-size:18px;
+  text-align:center;
 }
 
 .post-container {
   display: flex;
   flex-wrap: wrap;
+}
+
+.post-header {
+  width:100%;
 }
 
 //post-list//
