--- a/_sass/_layout.scss
+++ b/_sass/_layout.scss
@@ -103,7 +103,8 @@ svg {
   }
   @media screen and (max-width: 767px) {
     //border-bottom: 1px solid $black-color;
-    //width:100%;
+    width:80%;
+    text-align:center;
     position:absolute;
   }
 }
