--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -17,7 +17,7 @@ layout: default
 		<article class="post-content">
 			{{ content }}
 		</article>
-		<p class="datum">Scott Olsen -- {{ page.place }}, {{ page.date | date: "%b %Y" }}</p>
+		<p class="datum">{{ page.place }}, {{ page.date | date: "%b %Y" }}</p>
 		{% if page.notes %}
 		<h2 class="page-title">Notes</h2>
 		<p class="post-notes" id="post-notes">{{ page.notes }}</p>
