--- a/_sass/_layout.scss
+++ b/_sass/_layout.scss
@@ -35,6 +35,9 @@ svg {
   width: 100%;
   align-items: baseline;
   opacity: 0;
+  @media screen and (max-width: 767px) {
+    justify-content:center; 
+  }
 }
 
 /////overlay/////
@@ -55,15 +58,12 @@ svg {
 /////site-header/////
 
 .site-header {
-  //border-top: 1px solid $black-color;
   margin-top: $spacing-unit / 2;
   padding-left: $spacing-unit;
   width: 100%;
   padding-bottom:14px;
-  //border-bottom:0.5px solid #bbbbbb;
   @media screen and (min-width:1220px) and (max-width: 1440px) {
     //margin-left: 8%;
-
   }
   @media screen and (min-width: 768px) and (max-width: 1023px) {
     //margin-left: 5%;
@@ -73,6 +73,10 @@ svg {
     margin: 0;
     margin-top: $spacing-unit / 2;
     top: 10px;
+    display:flex;
+    justify-content:center;
+    align-items:center;
+    padding: 0 ;
   }
 }
 
@@ -92,8 +96,6 @@ svg {
 }
 
 .site-info {
-  //background-color:$black-color;
-  //color:#fff;
   float:left;
   width:40%;
   position:fixed;
@@ -102,10 +104,9 @@ svg {
     position:absolute;
   }
   @media screen and (max-width: 767px) {
-    //border-bottom: 1px solid $black-color;
-    width:79%;
     text-align:center;
-    position:absolute;
+    float:none;
+    position: relative;
   }
 }
 
@@ -294,12 +295,11 @@ width:100%;
     //margin-left: 44%;
   }
   @media screen and (max-width: 767px) {
-    width: 81%;
+    display: flex;
+    justify-content: center;
+    align-items: center; 
     margin: 0;
-    top: 0;
-    margin-bottom: 200px;
-    margin-left: 10%;
-    margin-top: 80px;
+    margin-top:140px;
   }
 }
 
@@ -318,6 +318,12 @@ width:100%;
 
 .post-header {
   width:100%;
+}
+
+.post {
+  @media screen and (max-width: 767px) {
+    width: 80%;
+  }
 }
 
 //post-list//
@@ -381,6 +387,16 @@ figcaption {
 
 .post-list {
   width:100%;
+  @media screen and (min-width: 768px)  and (max-width: 1219px) {
+    //margin-left: 44%;
+  }
+  @media screen and (max-width: 767px) {
+    margin: 0;
+    top: 0;
+    margin-bottom: 200px;
+    margin-top: 24px;
+    text-align: center;
+  }
 }
 
 ////critiques////
