--- a/css/main.scss
+++ b/css/main.scss
@@ -5,8 +5,8 @@ title: css
 @charset "utf-8";
 
 /////fonts/////
-$font-body:  "Surveyor SSm A", "Surveyor SSm B", Georgia, serif;
-$font-display: "Surveyor SSm A", "Surveyor SSm B", Georgia, serif;
+$font-body:  "Operator SSm A", "Operator SSm B", Helvetica, Arial, monospace;
+$font-display: "Knockout 30 A", "Knockout 30 B", Helvetica, sans-serif;
 $font-link: "Operator SSm A", "Operator SSm B", Helvetica, Arial, monospace;
 $font-body-size: 14px;
 $font-display-size: 18px;
