--- a/_includes/header.html
+++ b/_includes/header.html
@@ -1,7 +1,7 @@
 <header id="site-header" class="site-header">
     <div class="site-info">
         <a class="site-title" href="{{ site.baseurl }}/">olsen.works</a>
-        <a class="email-link" href="mailto:scg.olsen@gmail.com">contact</a>
+        <!--<a class="email-link" href="mailto:scg.olsen@gmail.com">contact</a>-->
         <p class="site-description">{{ site.description }}</p>
         <p class="current-page-indicator">Currently Viewing: {{ page.title }}</p>
     </div>
