(style,posts): Reversion to old site layout. Added post: That Old Deity

--- a/_includes/header.html
+++ b/_includes/header.html
@@ -4,14 +4,13 @@
         <a class="site-title" href="{{ site.baseurl }}/">olsen.works</a>
         <a class="page-link" href="{{site.baseurl}}/essays.html"> Essays</a>
         <a class="page-link" href="{{site.baseurl}}/fiction.html"> Fiction</a>
-        <a class="page-link" href="{{site.baseurl}}/notes.html"> Notes</a>
-        <a class="page-link" href="mailto:scg.olsen@gmail.com"> Contact</a>
+        <a class="page-link" href="{{site.baseurl}}/notes.html"> Dispatch</a>
+        <a class="page-link" href="mailto:scg.olsen@gmail.com?subject=Hello, Scott"> Contact</a>
         {% for page in site.pages %}
         {% if page.title == 'About' %}
         <a class="page-link" href="{{ page.url | prepend: site.baseurl }}"> {{ page.title }}</a>
         {% endif %}
         {% endfor %}
-        <a class="page-link" href="{{site.baseurl}}/work-with.html">Work with Me</a>
     </nav>
   </div>
 </header>
