(pages): Updated content on Essays and Dispatch pages. Hiding Fiction for now

--- a/_includes/header.html
+++ b/_includes/header.html
@@ -3,7 +3,7 @@
       <div class="trigger">
         <a class="site-title" href="{{ site.baseurl }}/">olsen.works</a>
         <a class="page-link" href="{{site.baseurl}}/essays.html"> Essays</a>
-        <a class="page-link" href="{{site.baseurl}}/fiction.html"> Fiction</a>
+        <!--<a class="page-link" href="{{site.baseurl}}/fiction.html"> Fiction</a>-->
         <a class="page-link" href="{{site.baseurl}}/notes.html"> Dispatch</a>
         <a class="page-link" href="mailto:scg.olsen@gmail.com?subject=Hello, Scott"> Contact</a>
         {% for page in site.pages %}
