(posts): Added language options. Posted 'Why Write, Why Read'

--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -4,6 +4,9 @@
   <body>
     {% include header.html %}
     <div class="page-content">
+        {% if page.layout == 'post' %}
+             
+        {% endif %}
         {{ content }}
         {% include footer.html %}
     </div>
