--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -3,7 +3,10 @@ layout: default
 ---
 <div class="post">
 	<div class="wrapper">
-		<header class="post-header">
+		{% if page.fname %}
+                    {% include language.html %}
+                {% endif %}
+                <header class="post-header">
 			<h1 class="post-title">{{ page.title }}</h1>
 		</header>
 		<article class="post-content">
