--- a/_includes/header.html
+++ b/_includes/header.html
@@ -1,4 +1,8 @@
+{% if page.hero %}
+<header id="site-header" class="site-header-hero">
+{% else %}
 <header id="site-header" class="site-header">
+{% endif %}    
     <nav class="site-nav">
       <div class="trigger">
         <a class="site-title" href="{{ site.baseurl }}/">olsen.works</a>
