--- a/_sass/_base.scss
+++ b/_sass/_base.scss
@@ -146,17 +146,57 @@ pre {
     }
 }
 
-.hero-wrapper {
+.wrapper-with-hero {
+    animation-name: opLoad;
+    animation-duration:500ms;
+    animation-timing-function: linear;
+    animation-direction:forward;
+    max-width: 44%;
+    margin-top: 520px;
+    margin-left: 14%;
+    margin-right:50%;
+    @extend %clearfix;
+    @include media-query($small-desktop) {
+        max-width: 44%;
+        margin-right:40%;
+        margin-top: 0px;
+    }
+    @include media-query($on-palm) {
+        max-width: 80%;
+        margin-right:10%;
+        margin-left:10%;
+        margin-top: 0px;
+    }
+}
+
+.hero-wrapper{
+    animation-name: opLoad;
+    animation-duration:500ms;
+    animation-timing-function: linear;
+    animation-direction:forward;
+    border-bottom: 1px solid $black-color;
+    margin-bottom: 40px;
+    background-color: #333;
+    width:100%;
+    position:absolute;
+    top:0;
+    float:left;
+    //background-image: url("../images/blk.png");
+    @include media-query($small-desktop) {
+       display:none; 
+    }
+    @include media-query($on-palm) {
+       display:none; 
+    }
+}
+
+.hero-content {
     max-width: 80%;
     margin-right: auto;
     margin-left: auto;
-    margin-bottom:150px;
-    margin-top:50px;
-    border-bottom: 1px solid $black-color;
+    margin-bottom:100px;
+    margin-top:120px;
     padding:20px;
-    background-color:$black-color;
-    background-image: url("../images/blk.png");
-    color:#fff;
     @extend %clearfix;
     @include media-query($on-laptop) {
         max-width: -webkit-calc(#{$content-width} - (#{$spacing-unit}));
