--- a/css/main.scss
+++ b/css/main.scss
@@ -6,6 +6,7 @@
 /////fonts/////
 $font-body:  "Surveyor SSm A", "Surveyor SSm B", Georgia, serif;
 $font-heading: "Ideal Sans SSm A","Ideal Sans SSm B", Helvetica, Arial, sans-serif;
+$font-code: "Operator SSm A", "Operator SSm B", monospace;
 $font-link: "Ideal Sans SSm A","Ideal Sans SSm B", Helvetica, Arial, sans-serif;
 $font-body-size: 12px;
 $heading-size: 18px;
