--- a/_includes/header.html
+++ b/_includes/header.html
@@ -11,6 +11,7 @@
         <a class="page-link" href="{{ page.url | prepend: site.baseurl }}"> {{ page.title }}</a>
         {% endif %}
         {% endfor %}
+        <a class="page-link" href="http://www.linkedin.com/in/scgolsen">LinkedIn</a>
     </nav>
   </div>
 </header>
