--- a/css/main.scss
+++ b/css/main.scss
@@ -19,7 +19,7 @@ $spacing-unit: 30px;
 $red-color:#CC4455;
 $body-color: #5E5E5E;
 $background-color: #fff;
-$link-color: #BABABA;
+$link-color: #000;
 $black-color: #2b2b2b;
 $grey-color: #828282;
 $grey-color-light: lighten($grey-color, 40%);
